Add images from S3

--- a/server/env.example
+++ b/server/env.example
@@ -10,4 +10,9 @@ ALLOWED_ORIGINS=https://your-app-name.herokuapp.com,http://localhost:3000,http:/
 
 # Rate limiting
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100 
+RATE_LIMIT_MAX_REQUESTS=100
+
+# AWS S3 Configuration
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_REGION=us-east-1 
