--- a/server/package.json
+++ b/server/package.json
@@ -8,17 +8,23 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["api", "mongodb", "express", "revista"],
+  "keywords": [
+    "api",
+    "mongodb",
+    "express",
+    "revista"
+  ],
   "author": "Lletres Barbares",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
+    "aws-sdk": "^2.1692.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5"
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
@@ -26,4 +32,4 @@
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
