--- a/server/env.example
+++ b/server/env.example
@@ -1,16 +1,12 @@
 # Configuración del servidor
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
 
 # MongoDB Atlas
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/lletres-barbares?retryWrites=true&w=majority
 
-# Configuración de CORS (para producción)
-ALLOWED_ORIGINS=https://your-app-name.herokuapp.com,http://localhost:3000,http://localhost:5173
-
-# Rate limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
+# Frontend URL (para CORS en producción)
+FRONTEND_URL=https://your-app-name.herokuapp.com
 
 # AWS S3 Configuration
 AWS_ACCESS_KEY_ID=your_aws_access_key_id
