--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:client": "cd client && npm run build",
     "start": "cd server && npm start",
     "install:all": "npm install && cd server && npm install && cd ../client && npm install",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "cd server && npm install && cd ../client && npm install && npm run build"
   },
   "keywords": ["revista", "cultura", "literatura", "catalan"],
   "author": "Lletres Barbares",
