--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,11 @@
     "@vitejs/plugin-react": "^4.7.0",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.4.35"
+    "postcss": "^8.4.35",
+    "@tailwindcss/typography": "^0.5.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
