--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "ua-parser-js": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
