--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "install:all": "npm install && cd server && npm install && cd ../client && npm install",
     "heroku-postbuild": "cd server && npm install && cd ../client && npm install && npm run build"
   },
-  "keywords": ["revista", "cultura", "literatura", "catalan"],
+  "keywords": [
+    "revista",
+    "cultura",
+    "literatura",
+    "catalan"
+  ],
   "author": "Lletres Barbares",
   "license": "MIT",
   "devDependencies": {
@@ -22,5 +27,10 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.11.0",
+    "geoip-lite": "^1.4.10",
+    "ua-parser-js": "^2.0.4"
   }
-} 
+}
