--- a/server/env.example
+++ b/server/env.example
@@ -11,4 +11,8 @@ FRONTEND_URL=https://your-app-name.herokuapp.com
 # AWS S3 Configuration
 AWS_ACCESS_KEY_ID=your_aws_access_key_id
 AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
-AWS_REGION=us-east-1 
+AWS_REGION=us-east-1
+
+# SEGURIDAD ANALYTICS - IMPORTANTE CAMBIAR EN PRODUCCIÓN
+ADMIN_TOKEN=your-super-secret-admin-token-change-in-production-123456789
+ADMIN_IPS=127.0.0.1,::1
