--- a/server/env.example
+++ b/server/env.example
@@ -16,3 +16,7 @@ AWS_REGION=us-east-1
 # SEGURIDAD ANALYTICS - IMPORTANTE CAMBIAR EN PRODUCCIÓN
 ADMIN_TOKEN=your-super-secret-admin-token-change-in-production-123456789
 ADMIN_IPS=127.0.0.1,::1
+
+# ACCESO A PÁGINAS DE ANALYTICS
+ANALYTICS_IPS=127.0.0.1,::1,192.168.1.0/24
+ANALYTICS_SECRET_PATH=admin-dashboard-2024
