--- a/pdf-generator/package.json
+++ b/pdf-generator/package.json
@@ -5,7 +5,10 @@
   "main": "generate-pdf.js",
   "scripts": {
     "generate": "node generate-pdf.js",
+    "generate-manual": "node generate-manual-pdf.js",
     "test": "node generate-pdf.js --issue=51",
+    "test-manual": "node generate-manual-pdf.js --issue=50",
+    "test-manual-mock": "node test-manual-pdf.js",
     "list": "node generate-multiple.js --list",
     "latest": "node generate-multiple.js --latest",
     "latest:3": "node generate-multiple.js --latest --count=3",
@@ -16,7 +19,8 @@
     "fs-extra": "^11.1.1",
     "path": "^0.12.7",
     "handlebars": "^4.7.8",
-    "marked": "^9.1.6"
+    "marked": "^9.1.6",
+    "mongoose": "^8.0.0"
   },
   "keywords": [
     "pdf",
