--- a/client/package.json
+++ b/client/package.json
@@ -11,16 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.13",
+    "@vitejs/plugin-react": "^5.0.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.4.35",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.8.3",
-    "vite": "^4.5.14",
-    "@vitejs/plugin-react": "^4.7.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.4.35",
-    "@tailwindcss/typography": "^0.5.16"
+    "vite": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
