--- a/pdf-editor-local/package.json
+++ b/pdf-editor-local/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Aplicación local para editar PDFs de Lletres Bàrbares",
   "main": "src/main.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,20 +13,23 @@
     "build-electron": "npm run build && electron-builder"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "chokidar": "^3.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
-    "chokidar": "^3.5.3"
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.4.0",
-    "typescript": "^5.0.0",
+    "@vitejs/plugin-react": "^5.0.2",
+    "concurrently": "^8.0.0",
     "electron": "^38.1.0",
     "electron-is-dev": "^3.0.1",
-        "concurrently": "^8.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^7.1.5",
     "wait-on": "^7.0.0"
   },
   "build": {
